=========
CHANGELOG
=========

0.21 (unreleased)
-----------------

**Improvements**

* Increase height of multiple select (fixes #891)

**BUG fixes**

* Fix KML coordinates not being in 3D.
* GPX now has trek description (fixes #775)
* Order overlapping topologies by order of progression (fixes #777)
* Improved TinyMCE configuration, for resize and cleanup (fixes #351, #711)
* Changed trek duration interval for notion of days (fixes #880)
* Show city departure in trek public export (fixes #881)
* Document customization of TinyMCE config (fixes #882)
* Fix 404 error on path delete (fixes #900)
* Fix project constraints not being displayed in details (fixes #893)


0.20.9 (2013-10-30)
-------------------

* Fix altimetric profile if topology geometry is wrong (fixes #875)
* Fix apparence of creation button in intervention list (fixes #877)
* Fix topology geometries that were sampled like paths 3D geometry (fixes #878)
* Fix topology lines geometries join in some situations (ref #722)
* Fix topology not well displayed if start/end on intersection (fixes #874)

0.20.8 (2013-10-22)
-------------------

* Public trek export : Fix various layout regressions (ref #848)
* Public trek export : Show POI theme pictogram (fixes #858)
* Public trek export : full width for information desk frame (fixes #856)
* Public trek export : add footer with trek title and page numbers (fixes #861)
* Public trek export : add floating picture in POI detail (fixes #860)
* Public trek export : fix POI thumbnails missing (fixes #869)
* Fix point offset lost on path update (fixes #867)
* Fix reconnect point topologies with offset to closest path (fixes #868)

0.20.7 (2013-10-16)
-------------------

* Fix topology geometry 3D being draped twice (fixes #863)
* Altimetric profile : Show max distance and round values (fixes #853)
* Altimetric profile : Add settings for colors (fixes #854)
* Public trek export : POIs list in two columns (fixes #855)