@@ -8,6 +8,7 @@ CHANGELOG
 **Improvements**
 
 * Increase height of multiple select (fixes #891)
+* Add project field in intervention filter (fixes #896)
 
 **BUG fixes**
 
